# mikrotik-mcp-server

./: .gitignore  LICENSE  README.md  mikrotik-mcp  pyproject.toml  requirements.txt  run_server.py
client/: __init__.py  mikrotik.py
config/: example.env
mikrotik_types/: models.py
python_src/: __init__.py  __main__.py
python_src/server/: __init__.py  server.py
python_src/types/: __init__.py
python_tests/: __init__.py  edge_case_test.py  test_connection.py  test_mcp_client_integration.py  test_mcp_improvements.py  test_mcp_server.py
server/: server.py
src/mcp_mikrotik/: __init__.py  base.py  client.py  models.py
src/mcp_mikrotik/dhcp/: __init__.py  client.py  models.py
src/mcp_mikrotik/firewall/: __init__.py  client.py  models.py
src/mcp_mikrotik/interface/: __init__.py  client.py  models.py
src/mcp_mikrotik/ip/: __init__.py  client.py  models.py
src/mcp_mikrotik/logs/: __init__.py  client.py  models.py
src/mcp_mikrotik/routing/: __init__.py  client.py  models.py
src/mcp_mikrotik/system/: __init__.py  client.py  models.py
src/mcp_mikrotik/wireless/: __init__.py  client.py  models.py
tests/: conftest.py  full_api_test.py  test_connection.py  test_dhcp_client.py  test_firewall_client.py  test_interface_client.py  test_ip_client.py  test_logs_client.py  test_mcp_client_integration.py  test_mcp_improvements.py  test_mcp_server.py  test_system_client.py
