[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mikrotik-mcp"
version = "0.1.0"
description = "MCP server for MikroTik RouterOS API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Evyatar Shtern"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
mikrotik-mcp = "python_src.server.server:main"

[tool.setuptools]
packages = ["python_src"]

[tool.pytest]
testpaths = ["python_tests"]
